--- a/index.html
+++ b/index.html
@@ -124,7 +124,18 @@
             }
         }
 
-        /* YouTube Video Section */
+        /* How to Buy Section */
+        .how-to-buy {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .how-to-buy ol {
+            text-align: left;
+            max-width: 600px;
+            margin: 0 auto 20px;
+        }
+
         .how-to-buy iframe {
             display: block;
             margin: 20px auto;
@@ -204,7 +215,6 @@
                     <li><strong>Sell Tax:</strong> 0% on all Sell Transactions</li>
                     <li><strong>Supply:</strong> 1,000,000,000</li>
                     <li><strong>LP:</strong> Locked</li>
-                    <li><strong>Token Address:</strong> <a href="https://solscan.io/token/ABCDGyLztRJasdDDgaCDajjkapump" target="_blank">ABCDGyLztRJasdDDgaCDajjkapump</a></li>
                 </ul>
             </div>
             <div class="tokenomics-image">
@@ -213,8 +223,14 @@
         </section>
 
         <!-- How to Buy Section -->
-        <section id="how-to-buy">
+        <section id="how-to-buy" class="how-to-buy">
             <h2>How to Buy</h2>
+            <ol>
+                <li>✅ **Create a wallet with Phantom:** Visit <a href="https://phantom.app" target="_blank">phantom.app</a>.</li>
+                <li>✅ **Get some $SOL:** Deposit or purchase $SOL into your Phantom wallet.</li>
+                <li>✅ **Swap $SOL for $BRACE:** Paste the $BRACE token address in the SWAP section.</li>
+                <li>✅ **You are now a $BRACE holder!**</li>
+            </ol>
             <iframe src="https://www.youtube.com/embed/46BHIaLmOYQ" allowfullscreen></iframe>
         </section>
 
@@ -226,11 +242,7 @@
     </div>
 
     <footer>
-        <p>Copyright © 2025 Brace Dog. All rights reserved.</p>
-        <div class="social-links">
-            <a href="https://x.com/BraceDogSolana" target="_blank">X/Twitter</a> | 
-            <a href="https://t.me/BraceDog" target="_blank">Telegram</a>
-        </div>
+        <p>© 2025 Brace Dog. All rights reserved.</p>
     </footer>
 </body>
 </html>
