--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <section id="what-is">
             <h2>What is $BRACE?</h2>
             <p>
-                $BRACE, inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the blockchain!
+                $BRACE - inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the Solana blockchain!
             </p>
             <div>
                 <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Image" style="max-width: 100%; border-radius: 10px;">
@@ -238,7 +238,30 @@
             <iframe src="https://www.youtube.com/embed/46BHIaLmOYQ" allowfullscreen></iframe>
         </section>
 
-        <!-- Disclaimer Section -->
+        <!-- Tokenomics Section -->
+        <section id="tokenomics" class="tokenomics">
+            <div class="tokenomics-text">
+                <h2>Tokenomics</h2>
+                <p><strong>Ticker:</strong> $BRACE</p>
+                <p><strong>Name:</strong> Brace Dog</p>
+                <p><strong>Buy Tax:</strong> 0%</p>
+                <p><strong>Sell Tax:</strong> 0%</p>
+                <p><strong>Supply:</strong> 1,000,000,000</p>
+                <p><strong>LP:</strong> Locked</p>
+            </div>
+        </section>
+
+        <!-- How to Buy Section -->
+        <section id="how-to-buy" class="how-to-buy">
+            <h2>How to Buy</h2>
+            <ul>
+                <li>Create a wallet with Phantom: Visit <a href="https://phantom.app">phantom.app</a></li>
+                <li>Get some $SOL: Purchase or deposit into your wallet</li>
+                <li>Swap $SOL for $BRACE</li>
+                <li>Enjoy being a $BRACE holder!</li>
+            </ul>
+        </section>
+
         <section id="disclaimer" class="disclaimer">
             <p>$BRACE is a meme coin with no intrinsic value or expectation of financial return. It is purely for entertainment purposes.</p>
         </section>
@@ -247,8 +270,8 @@
     <footer>
         <p>© 2025 Brace Dog. All rights reserved.</p>
         <div class="social-links">
-            <a href="https://x.com/BraceDogSolana" target="_blank">X/Twitter</a> |
-            <a href="https://t.me/BraceDog" target="_blank">Telegram</a>
+            <a href="https://x.com/BraceDogSolana">X/Twitter</a> |
+            <a href="https://t.me/BraceDog">Telegram</a>
         </div>
     </footer>
 </body>
