--- a/index.html
+++ b/index.html
@@ -230,12 +230,8 @@
         <section id="what-is">
             <h2>What is $BRACE?</h2>
             <p>
-                $BRACE - inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the Solana blockchain!
+                $BRACE, inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the blockchain!
             </p>
-            <div>
-                <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Image" style="max-width: 100%; border-radius: 10px;">
-            </div>
-            <iframe src="https://www.youtube.com/embed/46BHIaLmOYQ" allowfullscreen></iframe>
         </section>
 
         <!-- Tokenomics Section -->
@@ -248,6 +244,9 @@
                 <p><strong>Sell Tax:</strong> 0%</p>
                 <p><strong>Supply:</strong> 1,000,000,000</p>
                 <p><strong>LP:</strong> Locked</p>
+            </div>
+            <div class="tokenomics-image">
+                <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Tokenomics Image">
             </div>
         </section>
 
