--- a/index.html
+++ b/index.html
@@ -230,8 +230,10 @@
         <section id="what-is">
             <h2>What is $BRACE?</h2>
             <p>
-                $BRACE, inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the blockchain!
+                $BRACE - inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the Solana blockchain!
             </p>
+            </div>
+            <iframe src="https://www.youtube.com/embed/46BHIaLmOYQ" allowfullscreen></iframe>
         </section>
 
         <!-- Tokenomics Section -->
