--- a/index.html
+++ b/index.html
@@ -238,6 +238,22 @@
             </div>
         </section>
         
+                <!-- Tokenomics Section -->
+        <section id="tokenomics" class="tokenomics">
+            <div class="tokenomics-text">
+                <h2>Tokenomics</h2>
+                <p><strong>Ticker:</strong> $BRACE</p>
+                <p><strong>Name:</strong> Brace Dog</p>
+                <p><strong>Buy Tax:</strong> 0%</p>
+                <p><strong>Sell Tax:</strong> 0%</p>
+                <p><strong>Supply:</strong> 1,000,000,000</p>
+                <p><strong>LP:</strong> Locked</p>
+            </div>
+            <div class="tokenomics-image">
+                <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Tokenomics Image">
+            </div>
+        </section>
+        
                 <!-- How to Buy Section -->
         <section id="how-to-buy" class="how-to-buy">
             <h2>How to Buy</h2>
