--- a/index.html
+++ b/index.html
@@ -93,41 +93,18 @@
 
         /* Tokenomics Section */
         .tokenomics {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 30px;
             text-align: center;
+            margin-bottom: 30px;
         }
 
-        .tokenomics .tokenomics-text {
-            flex: 1;
-            text-align: left;
-        }
-
-        .tokenomics .tokenomics-text p {
-            margin: 5px 0;
-        }
-
-        .tokenomics .tokenomics-image {
-            flex: 1;
-        }
-
-        .tokenomics .tokenomics-image img {
+        .tokenomics iframe {
+            display: block;
+            margin: 20px auto;
             max-width: 100%;
             height: auto;
+            aspect-ratio: 16 / 9;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        @media (max-width: 768px) {
-            .tokenomics {
-                flex-direction: column;
-            }
-
-            .tokenomics .tokenomics-image {
-                order: -1;
-            }
         }
 
         /* How to Buy Section */
