--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                 <p><strong>Sell Tax:</strong> 0%</p>
                 <p><strong>Supply:</strong> 1,000,000,000</p>
                 <p><strong>LP:</strong> Locked</p>
+                <p><strong>Token Address:</strong> <a href="https://solscan.io/account/1nc1nerator11111111111111111111111111111111"> xZjdffpump</a></p>
             </div>
         </section>
         
@@ -232,7 +233,7 @@
         <section id="how-to-buy" class="how-to-buy">
             <h2>How to Buy</h2>
             <ul>
-                <li>Create a wallet with Phantom: Visit <a href="https://phantom.app">phantom.app</a></li>
+                <li>Create a wallet with Phantom: Visit <a href="https://phantom.app"> phantom.app</a></li>
                 <li>Get some $SOL: Purchase or deposit into your wallet</li>
                 <li>Swap $SOL for $BRACE</li>
                 <li>Enjoy being a $BRACE holder!</li>
@@ -248,7 +249,7 @@
     <footer>
         <p>© 2025 Brace Dog. All rights reserved.</p>
         <div class="social-links">
-            <a href="https://x.com/BraceDogSolana" target="_blank">X/Twitter</a> |
+            <a href="https://x.com/Brace_Dog" target="_blank">X/Twitter</a> |
             <a href="https://t.me/BraceDog" target="_blank">Telegram</a>
         </div>
     </footer>
