--- a/index.html
+++ b/index.html
@@ -239,7 +239,17 @@
                 <li>Enjoy being a $BRACE holder!</li>
             </ul>
         </section>
-
+        
+        <!-- This is his story: Section -->
+        <section id="what-is">
+            <h2>This is his sotry</h2>
+            <iframe src="https://www.youtube.com/embed/QUy2z9k5KFA?si=70sw17m3cWBouO8f" allowfullscreen></iframe>
+            <div>
+            <a href="https://www.dailymail.co.uk/femail/article-3471545/The-cutest-brace-face-Adorable-golden-retriever-puppy-wear-BRACES-instant-hit-online.html" target="_blank">Daily Mail Article</a> |
+            <a href="https://www.reddit.com/r/aww/comments/ve5kn8/oc_golden_retriever_gets_his_braces_removed/" target="_blank">Reddit Post</a>
+            </div>
+        </section>
+        
         <!-- Disclaimer Section -->
         <section id="disclaimer" class="disclaimer">
             <p>$BRACE is a meme coin with no intrinsic value or expectation of financial return. It is purely for entertainment purposes.</p>
