--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         
         <!-- This is his story: Section -->
         <section id="what-is">
-            <h2>This is his sotry</h2>
+            <h2>This is Wesley's full story</h2>
             <iframe src="https://www.youtube.com/embed/QUy2z9k5KFA?si=70sw17m3cWBouO8f" allowfullscreen></iframe>
             <div>
             <a href="https://www.dailymail.co.uk/femail/article-3471545/The-cutest-brace-face-Adorable-golden-retriever-puppy-wear-BRACES-instant-hit-online.html" target="_blank">Daily Mail Article</a> |
