--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <a href="#what-is">$BRACE</a>
         <a href="#tokenomics">Tokenomics</a>
         <a href="#how-to-buy">How to Buy</a>
-        <a href="#disclaimer">Disclaimer</a>
+        <a href="#full-story">Full story</a>
     </nav>
 
     <div class="container">
@@ -236,7 +236,7 @@
         </section>
         
         <!-- This is his story: Section -->
-        <section id="what-is">
+        <section id="full-story">
             <h2>This is Wesley's full story</h2>
             <iframe src="https://www.youtube.com/embed/QUy2z9k5KFA?si=70sw17m3cWBouO8f" allowfullscreen></iframe>
             <div>
