--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Header Section */
         header {
-            background: url('https://i.imgur.com/I5eJRo4.jpg') no-repeat center/cover;
+            background: url('https://imgur.com/91ra9UJ.jpg') no-repeat center/cover;
             color: white;
             text-align: center;
             padding: 50px 20px;
