--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <p>
                 $BRACE - inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the Solana blockchain!
             </p>
-            <blockquote class="imgur-embed-pub" lang="en" data-id="a/yLKXl8E"  ><a href="//imgur.com/a/yLKXl8E">Wesley&#39;s Story</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+             <iframe src="//imgur.com/a/yLKXl8E" allowfullscreen></iframe>
             <div>
                 <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Image" style="max-width: 100%; border-radius: 10px;">
             </div>
