--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <p>
                 $BRACE - inspired by the heartwarming story of Wesley, the brace-wearing Golden Retriever pup, brings smiles and wholesome vibes to the Solana blockchain!
             </p>
-             <iframe src="//imgur.com/a/yLKXl8E" allowfullscreen></iframe>
+             <iframe src="https://www.youtube.com/embed/46BHIaLmOYQ?si=MJ5BD4dthO7Tny43" allowfullscreen></iframe>
             <div>
                 <img src="https://i.imgur.com/yBWJI7G.jpg" alt="$BRACE Image" style="max-width: 100%; border-radius: 10px;">
             </div>
