--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <p><strong>Sell Tax:</strong> 0%</p>
                 <p><strong>Supply:</strong> 1,000,000,000</p>
                 <p><strong>LP:</strong> Locked</p>
-                <p><strong>Token Address:</strong> <a href="https://solscan.io/account/1nc1nerator11111111111111111111111111111111"> xZjdffpump</a></p>
+                <p><strong>Token Address:</strong> <a href="https://pump.fun/coin/gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump"> gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump</a></p>
             </div>
         </section>
         
