--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
                     </div>
                 </div>
                 <div class="mt-8 p-4 bg-gray-50 rounded-xl">
-                    <p class="font-mono text-sm break-all">Token: gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump</p>
+                    <a href="https://solscan.io/account/gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump" 
+                       class="font-mono text-sm break-all text-primary hover:underline">
+                        Token: gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump
+                    </a>
                 </div>
             </div>
         </section>
@@ -152,10 +155,20 @@
     <!-- Footer -->
     <footer class="bg-primary text-white py-8 mt-32">
         <div class="max-w-6xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-            <p>© 2025 Brace Dog</p>
+            <p class="text-white/90">© 2025 Brace Dog</p>
             <div class="flex space-x-6 mt-4 md:mt-0">
-                <a href="https://x.com/Brace_Dog" class="hover:opacity-80 transition">𝕏 Twitter</a>
-                <a href="https://t.me/BraceDog" class="hover:opacity-80 transition">Telegram</a>
+                <a href="https://x.com/Brace_Dog" class="hover:opacity-80 transition flex items-center">
+                    <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                    </svg>
+                    Twitter
+                </a>
+                <a href="https://t.me/BraceDog" class="hover:opacity-80 transition flex items-center">
+                    <svg class="w-5 h-5 mr-2" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.64 6.8c-.15 1.58-.8 5.42-1.13 7.19-.14.75-.42 1-.68 1.03-.58.05-1.02-.38-1.58-.75-.88-.58-1.38-.94-2.23-1.5-.99-.65-.35-1.01.22-1.59.15-.15 2.71-2.48 2.76-2.69.01-.03.01-.14-.07-.2-.08-.06-.19-.04-.27-.02-.12.02-1.96 1.25-5.54 3.69-.52.36-1 .53-1.42.52-.47-.01-1.37-.26-2.03-.48-.82-.27-1.47-.42-1.42-.88.03-.24.35-.49.96-.75 3.78-1.65 6.31-2.74 7.58-3.27 3.61-1.51 4.36-1.77 4.85-1.78.11 0 .35.03.5.16.13.13.17.31.19.43-.01.07-.01.15-.02.19z"/>
+                    </svg>
+                    Telegram
+                </a>
             </div>
         </div>
     </footer>
