--- a/index.html
+++ b/index.html
@@ -112,19 +112,34 @@
                     <div class="space-y-4">
                         <div class="flex items-center p-4 bg-gray-50 rounded-xl">
                             <span class="text-2xl mr-4">1️⃣</span>
-                            <p>Create a wallet with <a href="https://phantom.app" class="text-primary hover:underline">Phantom</a></p>
+                            <div>
+                                <p>Create a wallet with <a href="https://phantom.app" class="text-primary hover:underline">Phantom</a></p>
+                                <p class="text-sm text-gray-600">Visit phantom.app and follow the simple steps to create a new account</p>
+                            </div>
                         </div>
                         <div class="flex items-center p-4 bg-gray-50 rounded-xl">
                             <span class="text-2xl mr-4">2️⃣</span>
-                            <p>Get some $SOL</p>
+                            <div>
+                                <p>Get some $SOL</p>
+                                <p class="text-sm text-gray-600">Tap the BUY button in Phantom or deposit from an exchange</p>
+                            </div>
                         </div>
                         <div class="flex items-center p-4 bg-gray-50 rounded-xl">
                             <span class="text-2xl mr-4">3️⃣</span>
-                            <p>Swap $SOL for $BRACE</p>
+                            <div>
+                                <p>Swap $SOL for $BRACE</p>
+                                <p class="text-sm text-gray-600">Use the swap interface below to get your $BRACE tokens</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="aspect-square rounded-2xl overflow-hidden">
-                        <img src="https://i.imgur.com/yBWJI7G.jpg" alt="How to buy $BRACE" class="w-full h-full object-cover">
+                    <div class="bg-gray-50 p-4 rounded-xl">
+                        <iframe
+                            src="https://jup.ag/swap/SOL-BRACE"
+                            frameborder="0"
+                            width="100%"
+                            height="640px"
+                            style="border-radius: 12px;"
+                        ></iframe>
                     </div>
                 </div>
             </div>
@@ -172,5 +187,22 @@
             </div>
         </div>
     </footer>
+
+    <div class="scroll-container">
+        <div class="scrolling-text">
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+            <span class="brace-text">$BRACE</span>
+        </div>
+    </div>
 </body>
 </html>
