--- a/index.html
+++ b/index.html
@@ -161,38 +161,34 @@
         <section id="how-to-buy" class="scroll-mt-20">
             <div class="bg-white rounded-3xl p-8 shadow-xl">
                 <h2 class="text-4xl font-bold gradient-text mb-8">How to Buy</h2>
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div class="space-y-4">
-                        <div class="flex items-center p-4 bg-gray-50 rounded-xl">
-                            <span class="text-2xl mr-4">1️⃣</span>
-                            <div>
-                                <p>Create a wallet with <a href="https://phantom.app" class="text-primary hover:underline">Phantom</a></p>
-                                <p class="text-sm text-gray-600">Visit phantom.app and follow the simple steps to create a new account</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center p-4 bg-gray-50 rounded-xl">
-                            <span class="text-2xl mr-4">2️⃣</span>
-                            <div>
-                                <p>Get some $SOL</p>
-                                <p class="text-sm text-gray-600">Tap the BUY button in Phantom or deposit from an exchange</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center p-4 bg-gray-50 rounded-xl">
-                            <span class="text-2xl mr-4">3️⃣</span>
-                            <div>
-                                <p>Swap $SOL for $BRACE</p>
-                                <p class="text-sm text-gray-600">Use the swap interface below to get your $BRACE tokens</p>
-                            </div>
+                <div class="space-y-8">
+                    <div class="flex items-start gap-4">
+                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">1</div>
+                        <div>
+                            <h3 class="text-xl font-semibold mb-2">Create a Phantom Wallet</h3>
+                            <p class="text-gray-700">Download Phantom Wallet from <a href="https://phantom.app" target="_blank" class="gradient-text hover:opacity-80 transition">phantom.app</a> and set up your wallet.</p>
                         </div>
                     </div>
-                    <div class="bg-gray-50 p-4 rounded-xl">
-                        <iframe
-                            src="https://jup.ag/swap/SOL-BRACE"
-                            frameborder="0"
-                            width="100%"
-                            height="640px"
-                            style="border-radius: 12px;"
-                        ></iframe>
+                    <div class="flex items-start gap-4">
+                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">2</div>
+                        <div>
+                            <h3 class="text-xl font-semibold mb-2">Add SOL to your wallet</h3>
+                            <p class="text-gray-700">Purchase SOL from an exchange and send it to your Phantom Wallet.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start gap-4">
+                        <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">3</div>
+                        <div>
+                            <h3 class="text-xl font-semibold mb-2">Connect your wallet & swap</h3>
+                            <p class="text-gray-700 mb-4">Connect your Phantom Wallet and swap SOL for $BRACE using Jupiter Exchange below.</p>
+                            <div class="flex flex-col items-start gap-4">
+                                <button id="connect-wallet" class="gradient-button hover:opacity-80 transition">
+                                    Connect Phantom Wallet
+                                </button>
+                                <div id="wallet-status" class="text-gray-600"></div>
+                                <div id="jupiter-terminal" class="w-full mt-4"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
