--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </div>
                     <div class="flex items-start gap-4">
                         <div class="w-8 h-8 rounded-full bg-gradient-to-r from-primary to-secondary flex items-center justify-center text-white font-bold">3</div>
-                        <div>
+                        <div class="w-full">
                             <h3 class="text-xl font-semibold mb-2">Connect your wallet & swap</h3>
                             <p class="text-gray-700 mb-4">Connect your Phantom Wallet and swap SOL for $BRACE using Jupiter Exchange below.</p>
                             <div class="flex flex-col items-start gap-4">
@@ -211,7 +211,9 @@
                                     </div>
                                 </button>
                                 <div id="wallet-status" class="text-gray-600 font-medium"></div>
-                                <div id="jupiter-terminal" class="w-full mt-4 max-w-2xl"></div>
+                            </div>
+                            <div class="mt-6 w-full">
+                                <div id="jupiter-terminal" style="min-height: 600px; width: 100%;"></div>
                             </div>
                         </div>
                     </div>
