--- a/index.html
+++ b/index.html
@@ -293,41 +293,33 @@
         </div>
     </div>
 
-    <script>
-    const BRACE_TOKEN_ADDRESS = 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump';
+    <div class="container mx-auto px-4 py-8">
+        <div id="jupiter-terminal-container" class="w-full max-w-2xl mx-auto">
+            <div id="jupiter-terminal"></div>
+        </div>
+    </div>
 
-    function initializeJupiterSwap() {
-        // Configure Jupiter Terminal
+    <script>
+    // Initialize Jupiter Terminal
+    window.onload = function() {
         window.Jupiter.init({
             displayMode: 'integrated',
             integratedTargetId: 'jupiter-terminal',
             defaultExplorer: 'Solscan',
             defaultPair: {
                 fromMint: 'So11111111111111111111111111111111111111112', // SOL
-                toMint: BRACE_TOKEN_ADDRESS, // BRACE token
+                toMint: 'gpG5yhHYMojSkTaecXW2tjAL7X5gL3Jz3A66jHEpump'  // BRACE
             },
             containerStyles: {
                 width: '100%',
-                height: '500px',
-                border: '1px solid #2d2d2d',
+                height: '600px',
+                border: '1px solid #E5E7EB',
                 borderRadius: '16px',
-                display: 'block', // Ensure it's visible
             }
         });
-    }
+    };
 
-    // Wait for both DOM and Jupiter script to load
-    function loadJupiter() {
-        if (window.Jupiter) {
-            initializeJupiterSwap();
-        } else {
-            // If Jupiter isn't loaded yet, wait and try again
-            setTimeout(loadJupiter, 100);
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', loadJupiter);
-
+    // Wallet connection logic remains the same
     async function connectPhantomWallet() {
         try {
             const { solana } = window;
@@ -341,18 +333,13 @@
             const publicKey = response.publicKey.toString();
             console.log('Connected with Public Key:', publicKey);
             
-            // Update UI to show connected state
             document.getElementById('wallet-status').textContent = 'Connected: ' + publicKey.slice(0,4) + '...' + publicKey.slice(-4);
-            
-            // Make sure the swap interface is visible
-            document.getElementById('jupiter-terminal').style.display = 'block';
         } catch (err) {
             console.error(err);
             alert('Failed to connect wallet: ' + err.message);
         }
     }
 
-    // Add click handler to connect button
     document.getElementById('connect-wallet').addEventListener('click', connectPhantomWallet);
     </script>
 </body>
