--- a/index.html
+++ b/index.html
@@ -176,6 +176,22 @@
             </div>
         </section>
 
+        <!-- Story Section -->
+        <section id="story" class="scroll-mt-20">
+            <div class="bg-white rounded-3xl p-8 shadow-xl">
+                <h2 class="text-4xl font-bold gradient-text mb-8">Wesley's Story</h2>
+                <div class="aspect-video rounded-2xl overflow-hidden shadow-lg mb-8">
+                    <iframe class="w-full h-full" src="https://www.youtube.com/embed/QUy2z9k5KFA" allowfullscreen></iframe>
+                </div>
+                <div class="flex justify-center space-x-4">
+                    <a href="https://www.dailymail.co.uk/femail/article-3471545/The-cutest-brace-face-Adorable-golden-retriever-puppy-wear-BRACES-instant-hit-online.html" 
+                       class="px-6 py-3 bg-primary text-white rounded-full hover:opacity-90 transition">Read Article</a>
+                    <a href="https://www.reddit.com/r/aww/comments/ve5kn8/oc_golden_retriever_gets_his_braces_removed/" 
+                       class="px-6 py-3 bg-secondary text-white rounded-full hover:opacity-90 transition">Reddit Post</a>
+                </div>
+            </div>
+        </section>
+
         <!-- How to Buy Section -->
         <section id="how-to-buy" class="scroll-mt-20">
             <div class="bg-white rounded-3xl p-8 shadow-xl">
@@ -211,28 +227,9 @@
                                     </div>
                                 </button>
                                 <div id="wallet-status" class="text-gray-600 font-medium"></div>
-                                
-                                <!-- Target location for Jupiter Terminal -->
-                                <div id="jupiter-target-location" class="w-full mt-4"></div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Story Section -->
-        <section id="full-story" class="scroll-mt-20">
-            <div class="bg-white rounded-3xl p-8 shadow-xl">
-                <h2 class="text-4xl font-bold gradient-text mb-8">Wesley's Story</h2>
-                <div class="aspect-video rounded-2xl overflow-hidden shadow-lg mb-8">
-                    <iframe class="w-full h-full" src="https://www.youtube.com/embed/QUy2z9k5KFA" allowfullscreen></iframe>
-                </div>
-                <div class="flex justify-center space-x-4">
-                    <a href="https://www.dailymail.co.uk/femail/article-3471545/The-cutest-brace-face-Adorable-golden-retriever-puppy-wear-BRACES-instant-hit-online.html" 
-                       class="px-6 py-3 bg-primary text-white rounded-full hover:opacity-90 transition">Read Article</a>
-                    <a href="https://www.reddit.com/r/aww/comments/ve5kn8/oc_golden_retriever_gets_his_braces_removed/" 
-                       class="px-6 py-3 bg-secondary text-white rounded-full hover:opacity-90 transition">Reddit Post</a>
                 </div>
             </div>
         </section>
@@ -293,8 +290,8 @@
         </div>
     </div>
 
-    <!-- Keep the original container at the bottom for initialization -->
-    <div class="container mx-auto px-4 py-8" id="original-jupiter-container">
+    <!-- Jupiter Terminal at the bottom -->
+    <div class="container mx-auto px-4 py-8">
         <div id="jupiter-terminal-container" class="w-full max-w-2xl mx-auto">
             <div id="jupiter-terminal"></div>
         </div>
@@ -318,22 +315,9 @@
                 borderRadius: '16px',
             }
         });
-
-        // Wait a short moment for Jupiter to initialize, then move it
-        setTimeout(() => {
-            const jupiterContainer = document.getElementById('jupiter-terminal-container');
-            const targetLocation = document.getElementById('jupiter-target-location');
-            const originalContainer = document.getElementById('original-jupiter-container');
-
-            if (jupiterContainer && targetLocation) {
-                targetLocation.appendChild(jupiterContainer);
-                // Hide the original container
-                originalContainer.style.display = 'none';
-            }
-        }, 1000);
     };
 
-    // Wallet connection logic remains unchanged
+    // Wallet connection logic
     async function connectPhantomWallet() {
         try {
             const { solana } = window;
